--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.home .post img
+{
+	position: absolute;
+	top:  20px;
+	left: -100px;
+	opacity: 0.8; 
+}
+
+.home .post
+{
+	overflow: hidden;
+	padding-left:100px; 
+}
